# KUNAI-static-analyzer

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  annotated.html  classes.html  debian_distros_installer.sh  dir_000000_000004.html  dir_000001_000005.html  dir_000001_000007.html  dir_000002_000005.html  dir_000003_000004.html  dir_000003_000005.html  dir_000004_000005.html  dir_000004_000009.html  dir_000005_000007.html  dir_000006_000009.html  dir_000007_000001.html  dir_000008_000001.html  dir_000008_000009.html  dir_000009_000002.html  dir_000009_000008.html  dir_000010_000008.html  dir_000012_000009.html  dir_000012_000013.html  dir_000013_000003.html  dir_000014_000009.html  dir_000015_000009.html  dir_000016_000001.html  dir_000016_000005.html  dir_000017_000005.html  dir_02a8364d484e4e82fa2772f4bc4e03be.html  dir_02a8364d484e4e82fa2772f4bc4e03be_dep.map  dir_02a8364d484e4e82fa2772f4bc4e03be_dep.md5  dir_0eee36ff59bc24f246ee62c41e5b9a12.html  dir_0eee36ff59bc24f246ee62c41e5b9a12_dep.map  dir_0eee36ff59bc24f246ee62c41e5b9a12_dep.md5  (+299 more)
backward-slicing/: CMakeLists.txt  backward-slicing.cpp  backward_analysis.cpp
backward-slicing/example_files/: classes.dex  test1_targets.txt  test2.dex  test2_targets.txt
backward-slicing/include/backward-slicing/: backward_analysis.hpp
backward-slicing/src/: backward-slicing.cpp  backward_analysis.cpp
dalvik-disassembler/: CMakeLists.txt  dalvik-disassembler.cpp
examples/: CMakeLists.txt  header-simple-printer.cpp  method-extractor.cpp
headers-parser/: CMakeLists.txt  headers-parser.cpp
kunai-lib/: CMakeLists.txt  KUNAIConfig.cmake.in  README.md
kunai-lib/MjolnIR/: CMakeLists.txt
kunai-lib/MjolnIR/Dalvik/: dalvik_types.td  mjolnir_base.td
kunai-lib/MjolnIR/include/: CMakeLists.txt
kunai-lib/MjolnIR/include/Dalvik/: MjolnIRDialect.hpp  MjolnIROps.hpp  MjolnIROps.td  MjolnIRTypes.hpp  MjolnIRTypes.td
kunai-lib/MjolnIR/include/Lifter/: MjolnIRLifter.hpp  mjolnir_lifter.hpp
kunai-lib/MjolnIR/include/MjolnIR/Analysis/: MjolnIRManager.hpp
kunai-lib/MjolnIR/include/MjolnIR/Dalvik/: CMakeLists.txt  MjolnIRDialect.hpp  MjolnIRDialect.td  MjolnIROps.hpp  MjolnIROps.td  MjolnIRTypes.hpp  MjolnIRTypes.td
kunai-lib/MjolnIR/include/MjolnIR/Lifter/: MjolnIRLifter.hpp
kunai-lib/MjolnIR/include/MjolnIR/Transforms/: CfgToScf.hpp  MjolnIRToOpGraph.hpp
kunai-lib/MjolnIR/lib/: CMakeLists.txt
kunai-lib/MjolnIR/lib/Analysis/: CMakeLists.txt  MjolnIRManager.cpp
kunai-lib/MjolnIR/lib/Dalvik/: CMakeLists.txt  MjolnIRDialect.cpp  MjolnIROps.cpp  MjolnIRTypes.cpp
kunai-lib/MjolnIR/lib/Lifter/: CMakeLists.txt  InstructionLifter.cpp  MjolnIRLifter.cpp  mjolnir_lifter.cpp
kunai-lib/MjolnIR/lib/Lifter/Instructions/: Instruction10t.cpp  Instruction10x.cpp  Instruction11n.cpp  Instruction11x.cpp  Instruction12x.cpp  Instruction20t.cpp  Instruction21c.cpp  Instruction21h.cpp  Instruction21s.cpp  Instruction21t.cpp  Instruction22b.cpp  Instruction22c.cpp  Instruction22s.cpp  Instruction22t.cpp  Instruction22x.cpp  (+8 more)
kunai-lib/MjolnIR/lib/Transforms/: CMakeLists.txt  CfgToScf.cpp  MjolnIRToOpGraph.cpp
kunai-lib/include/Exceptions/: apkunzip_exception.hpp  disassembler_exception.hpp  incorrectdexfile_exception.hpp  incorrectid_exception.hpp
kunai-lib/include/Kunai/DEX/: dex.hpp
kunai-lib/include/Kunai/Exceptions/: analysis_exception.hpp  apkunzip_exception.hpp  disassembler_exception.hpp  generic_exception.hpp  incorrectdexfile_exception.hpp  incorrectid_exception.hpp  invalidinstruction_exception.hpp  lifter_exception.hpp  outofbound_exception.hpp  parser_exception.hpp  stream_exception.hpp
kunai-lib/include/Kunai/Utils/: iterator_range.hpp  kunaistream.hpp  logger.hpp
kunai-lib/internal-doc/MJOLNIR/: dalvik_opcodes.md
kunai-lib/lib/: CMakeLists.txt
kunai-lib/lib/DEX/: CMakeLists.txt  dex.cpp
kunai-lib/lib/DEX/DVM/: CMakeLists.txt  dalvik_instructions.cpp  dalvik_opcodes.cpp  dex_disassembler.cpp  disassembler.cpp  linear_sweep_disassembler.cpp  recursive_traversal_disassembler.cpp
kunai-lib/lib/DEX/analysis/: CMakeLists.txt  basic_blocks.cpp  classes.cpp  dex_analysis.cpp  methods.cpp
kunai-lib/lib/DEX/parser/: CMakeLists.txt  annotations.cpp  classes.cpp  encoded.cpp  fields.cpp  header.cpp  map_item.cpp  methods.cpp  parser.cpp  protos.cpp  strings.cpp  types.cpp
kunai-lib/lib/Utils/: CMakeLists.txt  kunaistream.cpp  logger.cpp
kunai-lib/tests/test-assignment-arith-logic/: Main.dex
kunai-lib/tests/test-cast/: Main.java  classes.dex
kunai-lib/tests/test-const_class/: Main.dex
kunai-lib/tests/test-cyclomatic-complexity/: Main.dex
kunai-lib/tests/test-disassembler/: Main.java  classes.dex
kunai-lib/tests/test-eurollvm-1/: Main.java  classes.dex
kunai-lib/tests/test-graph/: Main.dex
kunai-lib/tests/test-loop/: Main.java  classes.dex
kunai-lib/tests/test-modexp/: Main.dex
kunai-lib/tests/test-news/: Main.dex
kunai-lib/tests/test-ssa/: Main.java  classes.dex
kunai-lib/tests/test-static-fields/: StaticFields.java  classes.dex
kunai-lib/tests/test-try-catch/: Main.dex
kunai-lib/tests/test-very-simple/: Simple.java  classes.dex
kunai-lib/tests/test-vm/: PCodeVM.dex  VClass.dex
kunai-lib/tests/test_switches/: Switches.java  classes.dex
kunai-lib/unit-tests/: CMakeLists.txt
kunai-lib/unit-tests/disassembler/: CMakeLists.txt  test-disassembler.cpp
kunai-lib/unit-tests/graph/: CMakeLists.txt  test-graph.cpp
kunai-lib/unit-tests/ir-analysis/: CMakeLists.txt  test-ir-analysis.cpp
kunai-lib/unit-tests/lifter/: CMakeLists.txt  test-lifter.cpp
kunai-lib/unit-tests/parser/: CMakeLists.txt  test-parser.cpp
kunai-lib/unit-tests/print-header/: CMakeLists.txt  test-print-header.cpp
kunai-lib/unit-tests/xrefs/: CMakeLists.txt  test-xrefs.cpp  test-xrefs.in
projects/: CMakeLists.txt  test-optimizations.cpp  test-optimizations2.cpp  test_apk_analysis.cpp  test_dex_analysis.cpp  test_dex_disassembler.cpp  test_dex_lifter.cpp  test_dex_parser.cpp  test_dex_recursive_analysis.cpp  test_dominators.cpp  test_ir.cpp  test_ir_graph.cpp  test_ssa_form.cpp
(+1227 files in other folders)
