macro(add_dialect name)
    add_library(${name} ${ARGN})
    target_link_libraries(${name} LLVMSupport MLIRDialect)
    target_include_directories(${name} PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
    target_compile_options(${name} PUBLIC -fno-rtti -fvisibility=hidden)
    # Needed by mlir-tablegen
    include_directories(${MLIR_INCLUDE_DIRS})
    include_directories(${LLVM_INCLUDE_DIRS})

    set(LLVM_TARGET_DEFINITIONS ${name}.td)
    mlir_tablegen(${name}Dialect.h.inc -gen-dialect-decls)
    mlir_tablegen(${name}Dialect.cpp.inc -gen-dialect-defs)
    mlir_tablegen(${name}Ops.h.inc -gen-op-decls)
    mlir_tablegen(${name}Ops.cpp.inc -gen-op-defs)
    mlir_tablegen(${name}TypeDefs.h.inc -gen-typedef-decls)
    mlir_tablegen(${name}TypeDefs.cpp.inc -gen-typedef-defs)
    mlir_tablegen(${name}Enums.h.inc -gen-enum-decls)
    mlir_tablegen(${name}Enums.cpp.inc -gen-enum-defs)
    add_public_tablegen_target(${name}Gen)
    add_dependencies(${name} ${name}Gen)
endmacro()

add_subdirectory(Dalvik)